# dromedary

./: .gitignore  .testr.conf  Cargo.toml  MANIFEST.in  Makefile  pyproject.toml  setup.py
.github/workflows/: breezy-tests.yml  crates-io.yaml  pythonpackage.yml  wheels.yaml
_transport_rs/: Cargo.toml
_transport_rs/src/: brokenrename.rs  fakenfs.rs  fakevfat.rs  http.rs  lib.rs  log.rs  memory.rs  pathfilter.rs  readonly.rs  sftp.rs  unlistable.rs  urlutils.rs
_transport_rs/src/http/: client.rs  mod.rs  response.rs  transport.rs
_transport_rs/src/ssh/: mod.rs  russh_vendor.rs  subprocess.rs
_transport_rs/src/webdav/: mod.rs  transport.rs
dromedary/: Cargo.toml  __init__.py  _bedding.py  _config.py  _hooks.py  _transport_rs.pyi  _ui.py  brokenrename.py  cethread.py  chroot.py  decorator.py  errors.py  fakenfs.py  fakevfat.py  gio_transport.py  local.py  log.py  memory.py  osutils.py  pathfilter.py  readonly.py  setup.py  sftp.py  trace.py  unlistable.py  urlutils.py  version.py
dromedary/_transport_rs/: Cargo.toml
dromedary/_transport_rs/src/: brokenrename.rs  fakevfat.rs  gio.rs  lib.rs  pathfilter.rs  sftp.rs  urlutils.rs
dromedary/_urlutils_rs/: Cargo.toml
dromedary/_urlutils_rs/src/: lib.rs
dromedary/_urlutils_rs/urlutils/src/: lib.rs
dromedary/http/: __init__.py  ca_bundle.py  response.py  urllib.py
dromedary/src/: chroot.rs  fakevfat.rs  fcntl-locks.rs  gio.rs  lib.rs  local.rs  memory.rs  pathfilter.rs  pyo3.rs  readonly.rs  sftp.rs  urlutils.rs
dromedary/src/osutils/: mod.rs  path.rs
dromedary/ssh/: __init__.py  paramiko.py  russh.py  subprocess_rs.py
dromedary/tests/: __init__.py  http_server.py  per_transport.py  stub_sftp.py  test_cethread.py  test_gio_transport.py  test_http.py  test_http_response.py  test_server.py  test_test_server.py  test_transport.py  test_transport_log.py  test_urlutils.py  test_webdav.py  transport_util.py
dromedary/transport-py/src/: lib.rs  urlutils.rs
dromedary/webdav/: __init__.py  webdav.py
dromedary/webdav/tests/: __init__.py  dav_server.py  test_webdav.py
src/: brokenrename.rs  chroot.rs  decorator.rs  fakenfs.rs  fakevfat.rs  fcntl-locks.rs  gio.rs  http.rs  lib.rs  local.rs  log.rs  memory.rs  pathfilter.rs  pyo3.rs  readonly.rs  registry.rs  sftp.rs  ssh.rs  unlistable.rs  urlutils.rs  win32-locks.rs
src/http/: auth.rs  client.rs  mod.rs  response.rs  transport.rs
src/osutils/: path.rs
src/webdav/: mod.rs  transport.rs  xml.rs
