[workspace]
resolver = "2"
members = [
    "dromedary",
    "dromedary/osutils-rs",
    "dromedary/_transport_rs",
    "dromedary/transport-py",
    "dromedary/_urlutils_rs",
    "dromedary/_urlutils_rs/urlutils",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
nix = ">=0.26"
pyo3 = "0.26"
pyo3-filelike = "0.5.0"
url = "2"
log = "0.4"
