[workspace]
resolver = "2"
members = [
    "_transport_rs",
]

[workspace.package]
version = "0.1.1"

[workspace.dependencies]
nix = ">=0.26"
pyo3 = "0.28"
pyo3-filelike = "0.5.2"
url = "2"
log = "0.4"

[package]
name = "dromedary"
version = { workspace = true }
edition = "2018"
description = "Transport layer for Breezy"
license = "GPL-2.0+"
repository = "https://github.com/breezy-team/dromedary"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]

[dependencies]
url = { workspace = true }
tempfile = "3"
pyo3 = { workspace = true, optional = true }
pyo3-filelike = { workspace = true, optional = true }
path-clean = "1"
walkdir = "2.3"
lazy_static = "1"
log = { workspace = true }
libc = "0.2"
regex = "1.5.4"
percent-encoding = "2.1.0"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
rustls-native-certs = "0.8"
base64 = "0.22"
# reqwest replaces ureq: ureq-proto (transitive) hardcodes a method
# whitelist that rejects WebDAV verbs (MKCOL, MOVE, COPY, PROPFIND).
# reqwest is hyper-based and accepts arbitrary methods. `blocking`
# keeps our sync API shape; `rustls-tls-native-roots` wires rustls
# with the platform's native trust store.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "gzip", "blocking"] }
# Lightweight dep used only for typed error classification — we
# downcast reqwest's error chain to `hyper::Error` so we can
# distinguish protocol-level parse failures (bad HTTP version, bad
# status line) from connection-level ones (DNS/TCP/TLS) without
# string-matching the error message.
hyper = { version = "1", default-features = false }
http = "1"
quick-xml = { version = "0.37", optional = true }
gio = { version = "0.22", optional = true }
glib = { version = "0.22", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:pyo3-filelike"]
gio = ["dep:gio", "dep:glib"]
# WebDAV transport on top of HTTP. Pulls in quick-xml for parsing
# multi-status PROPFIND responses; opt-in because callers that only
# need HTTP shouldn't pay the XML-parser cost.
webdav = ["dep:quick-xml"]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "uio"] }
