[workspace]
resolver = "2"
members = [
    "_transport_rs",
]

[workspace.package]
version = "0.1.5"

[workspace.dependencies]
nix = "0.31"
pyo3 = "0.28"
pyo3-filelike = "0.5.2"
url = "2"
log = "0.4"

[package]
name = "dromedary"
version = { workspace = true }
edition = "2021"
description = "Transport layer for Breezy"
license = "GPL-2.0+"
repository = "https://github.com/breezy-team/dromedary"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]

[dependencies]
url = { workspace = true }
tempfile = "3"
pyo3 = { workspace = true, optional = true }
pyo3-filelike = { workspace = true, optional = true }
path-clean = "1"
walkdir = "2.3"
lazy_static = "1"
log = { workspace = true }
libc = "0.2"
regex = "1.5.4"
percent-encoding = "2.1.0"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
rustls-native-certs = "0.8"
base64 = "0.22"
# reqwest replaces ureq: ureq-proto (transitive) hardcodes a method
# whitelist that rejects WebDAV verbs (MKCOL, MOVE, COPY, PROPFIND).
# reqwest is hyper-based and accepts arbitrary methods. `blocking`
# keeps our sync API shape; `native-tls` uses the platform TLS
# library (OpenSSL on Linux, SChannel on Windows, Secure Transport
# on macOS), which matches Python's `ssl` module behaviour. Linkage
# to the OpenSSL backend on Linux is controlled by the `vendored-tls`
# crate feature — off by default (system OpenSSL), on for Python wheel
# builds (statically-linked OpenSSL).
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "gzip", "blocking"] }
# Lightweight dep used only for typed error classification — we
# downcast reqwest's error chain to `hyper::Error` so we can
# distinguish protocol-level parse failures (bad HTTP version, bad
# status line) from connection-level ones (DNS/TCP/TLS) without
# string-matching the error message.
hyper = { version = "1", default-features = false }
http = "1"
quick-xml = { version = "0.37", optional = true }
gio = { version = "0.22", optional = true }
glib = { version = "0.22", optional = true }
# SFTP client used by the optional sftp transport. Construction takes
# any Read+Write channel so we don't pull in an SSH library here.
sftp = { version = "0.2.3", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:pyo3-filelike"]
gio = ["dep:gio", "dep:glib"]
# WebDAV transport on top of HTTP. Pulls in quick-xml for parsing
# multi-status PROPFIND responses; opt-in because callers that only
# need HTTP shouldn't pay the XML-parser cost.
webdav = ["dep:quick-xml"]
# SFTP transport. Caller supplies the SSH byte-stream channel — no
# SSH-library dep is added here so embedders pick their own backend.
sftp = ["dep:sftp"]
# Statically link a vendored OpenSSL into the native-tls backend (Linux
# only — Windows/macOS native-tls uses SChannel/Secure Transport and
# this is a no-op). Intended for Python wheel builds in cibuildwheel
# manylinux/musllinux images where openssl-devel isn't reliably present.
vendored-tls = ["reqwest/native-tls-vendored"]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "uio"] }
