[build-system]
requires = [
    "setuptools>=60",
    "setuptools-rust",
]
build-backend = "setuptools.build_meta"

[project]
name = "dromedary"
maintainers = [{name = "Breezy Developers", email = "team@breezy-vcs.org"}]
description = "Transport abstraction layer split out from Breezy"
readme = "README.md"
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "catalogus",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.breezy-vcs.org/"
Repository = "https://github.com/breezy-team/dromedary"

[project.optional-dependencies]
paramiko = ["paramiko>=1.6.2"]
dev = [
    "ruff==0.15.10",
    "types-paramiko",
]
testing = [
    "testtools",
    "testscenarios",
    "python-subunit",
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
include = ["dromedary", "dromedary.*"]
namespaces = false

[tool.setuptools.package-data]
dromedary = [
    "tests/ssl_certs/ca.crt",
    "tests/ssl_certs/server_without_pass.key",
    "tests/ssl_certs/server_with_pass.key",
    "tests/ssl_certs/server.crt",
    "py.typed",
]

[tool.setuptools.dynamic]
version = {attr = "dromedary.version.__version__"}

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["lib", "bin"]

[tool.ruff.lint]
select = [
    "ANN",  # annotations
    "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # naming
    "B",  # bugbear
    "I",  # isort
    "S",  # bandit
    "TCH", # typecheck
    "INT", # gettext
    "SIM", # simplify
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "RUF", # ruf-specific
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "D205",
    "D417",
    "F821",
    "E501",
    "D402",
    "E402",
    "E741",
    "F405",
    "N801",
    "N802",
    "N804",
    "N806",
    "N818",
    "N999",
    "S602",
    "S603",
    "S105",
    "S106",
    "S110",
    "S317",
    "D104",
    "RUF012",
    "RUF005",
    "RUF015",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM118",
    "UP031",
    "UP032",
]
unfixable = ["ANN204"]

[tool.ruff.lint.extend-per-file-ignores]
"dromedary/tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
"dromedary/**/test_*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel.linux]
skip = "*-musllinux_*"
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]

[tool.cibuildwheel.windows]
