[package]
name = "dromedary-transport-rs"
version = { workspace = true }
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dromedary = { path = "..", version = "0.1.1" }
pyo3 = { workspace = true, features = ["extension-module"]}
pyo3-filelike = { workspace = true }
sftp = "0.2.3"
url = { workspace = true }
log = { workspace = true }

[features]
default = []
gio = ["dromedary/gio"]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs"] }
