[package]
name = "dromedary-transport-rs"
version = { workspace = true }
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dromedary = { path = "..", version = "0.1.1" }
pyo3 = { workspace = true, features = ["extension-module"]}
pyo3-filelike = { workspace = true }
sftp = "0.2.3"
url = { workspace = true }
log = { workspace = true }
russh = { version = "0.54", optional = true }
tokio = { version = "1", features = ["rt", "io-util", "net", "sync", "macros"], optional = true }
lazy_static = "1"

[features]
default = ["russh", "webdav"]
gio = ["dromedary/gio"]
russh = ["dep:russh", "dep:tokio"]
# WebDAV bindings. Forwards to dromedary/webdav which pulls in
# quick-xml for parsing multi-status PROPFIND responses.
webdav = ["dromedary/webdav"]
# TODO: add `libssh2` and `ssh2-rs` features when those backends are implemented.

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "socket"] }
